# showargsw

./: Cargo.toml  README.md  app.manifest  build.rs
src/: main.rs
